native/src/lsquic/lsquic.h

struct sockaddr;
enum lsquic_version
{
    LSQVER_043,
    LSQVER_046,
    LSQVER_050,
#if LSQUIC_USE_Q098
    LSQVER_098,
#define LSQUIC_EXPERIMENTAL_Q098 (1 << LSQVER_098)
#else
#define LSQUIC_EXPERIMENTAL_Q098 0
#endif
    LSQVER_ID27,
    LSQVER_ID29,
    LSQVER_ID34,
    LSQVER_I001,
    LSQVER_VERNEG,
    N_LSQVER
};
struct lsquic_stream_if {
    lsquic_conn_ctx_t *(*on_new_conn)(void *stream_if_ctx,
                                                        lsquic_conn_t *c);
    void (*on_goaway_received)(lsquic_conn_t *c);
    void (*on_conn_closed)(lsquic_conn_t *c);
    lsquic_stream_ctx_t *
         (*on_new_stream)(void *stream_if_ctx, lsquic_stream_t *s);
    void (*on_read)     (lsquic_stream_t *s, lsquic_stream_ctx_t *h);
    void (*on_write)    (lsquic_stream_t *s, lsquic_stream_ctx_t *h);
    void (*on_close)    (lsquic_stream_t *s, lsquic_stream_ctx_t *h);
    ssize_t (*on_dg_write)(lsquic_conn_t *c, void *, size_t);
    void (*on_datagram)(lsquic_conn_t *, const void *buf, size_t);
    void (*on_hsk_done)(lsquic_conn_t *c, enum lsquic_hsk_status s);
    void (*on_new_token)(lsquic_conn_t *c, const unsigned char *token,
                                                        size_t token_size);
    void (*on_sess_resume_info)(lsquic_conn_t *c, const unsigned char *, size_t);
    void (*on_reset)    (lsquic_stream_t *s, lsquic_stream_ctx_t *h, int how);
    void (*on_conncloseframe_received)(lsquic_conn_t *c,
                                       int app_error, uint64_t error_code,
                                       const char *reason, int reason_len);
};
struct ssl_ctx_st;
struct lsxpack_header;
typedef struct ssl_ctx_st * (*lsquic_lookup_cert_f)(
    void *lsquic_cert_lookup_ctx, const struct sockaddr *local, const char *sni);
struct lsquic_engine_settings {
    unsigned        es_versions;
    unsigned        es_cfcw;
    unsigned        es_sfcw;
    unsigned        es_max_cfcw;
    unsigned        es_max_sfcw;
    unsigned        es_max_streams_in;
    unsigned long   es_handshake_to;
    unsigned long   es_idle_conn_to;
    int             es_silent_close;
    unsigned        es_max_header_list_size;
    const char     *es_ua;
    uint64_t        es_sttl; 
    uint32_t        es_pdmd; 
    uint32_t        es_aead; 
    uint32_t        es_kexs; 
    unsigned        es_max_inchoate;
    int             es_support_push;
    int             es_support_tcid0;
    int             es_support_nstp;
    int             es_honor_prst;
    int             es_send_prst;
    unsigned        es_progress_check;
    int             es_rw_once;
    unsigned        es_proc_time_thresh;
    int             es_pace_packets;
    unsigned        es_clock_granularity;
    unsigned        es_cc_algo;
    unsigned        es_cc_rtt_thresh;
    unsigned        es_noprogress_timeout;
    unsigned        es_init_max_data;
    unsigned        es_init_max_stream_data_bidi_remote;
    unsigned        es_init_max_stream_data_bidi_local;
    unsigned        es_init_max_stream_data_uni;
    unsigned        es_init_max_streams_bidi;
    unsigned        es_init_max_streams_uni;
    unsigned        es_idle_timeout;
    unsigned        es_ping_period;
    unsigned        es_scid_len;
    unsigned        es_scid_iss_rate;
    unsigned        es_qpack_dec_max_size;
    unsigned        es_qpack_dec_max_blocked;
    unsigned        es_qpack_enc_max_size;
    unsigned        es_qpack_enc_max_blocked;
    int             es_ecn;
    int             es_allow_migration;
    int             es_ql_bits;
    int             es_spin;
    int             es_delayed_acks;
    int             es_timestamps;
    unsigned short  es_max_udp_payload_size_rx;
    int             es_grease_quic_bit;
    int             es_dplpmtud;
    unsigned short  es_base_plpmtu;
    unsigned short  es_max_plpmtu;
    unsigned        es_mtu_probe_timer;
    int             es_datagrams;
    int             es_optimistic_nat;
    int             es_ext_http_prio;
    int             es_qpack_experiment;
    unsigned es_ptpc_periodicity;   
    unsigned es_ptpc_max_packtol;   
    int      es_ptpc_dyn_target;    
    float    es_ptpc_target,        
             es_ptpc_prop_gain,     
             es_ptpc_int_gain,      
             es_ptpc_err_thresh,    
             es_ptpc_err_divisor;   
    int             es_delay_onclose;
    unsigned        es_max_batch_size;
    int             es_check_tp_sanity;
};
void
lsquic_engine_init_settings (struct lsquic_engine_settings *,
                             unsigned lsquic_engine_flags);
typedef int (*lsquic_packets_out_f)(
    void                          *packets_out_ctx,
    const struct lsquic_out_spec  *out_spec,
    unsigned                       n_packets_out
);
struct lsquic_shared_hash_if
{
    int (*shi_insert)(void *shi_ctx, void *key, unsigned key_sz,
                      void *data, unsigned data_sz, time_t expiry);
    int (*shi_delete)(void *shi_ctx, const void *key, unsigned key_sz);
    int (*shi_lookup)(void *shi_ctx, const void *key, unsigned key_sz,
                                     void **data, unsigned *data_sz);
};
struct lsquic_packout_mem_if
{
    void *  (*pmi_allocate) (void *pmi_ctx, void *peer_ctx, lsquic_conn_ctx_t *, unsigned short sz,
                                                                char is_ipv6);
    void    (*pmi_release)  (void *pmi_ctx, void *peer_ctx, void *buf,
                                                                char is_ipv6);
    void    (*pmi_return)  (void *pmi_ctx, void *peer_ctx, void *buf,
                                                                char is_ipv6);
};
typedef void (*lsquic_cids_update_f)(void *ctx, void **peer_ctx,
                                const lsquic_cid_t *cids, unsigned n_cids);
struct stack_st_X509;
struct lsquic_hset_if
{
    void * (*hsi_create_header_set)(void *hsi_ctx, lsquic_stream_t *stream,
                                    int is_push_promise);
    struct lsxpack_header *
                        (*hsi_prepare_decode)(void *hdr_set,
                                              struct lsxpack_header *hdr,
                                              size_t space);
    int (*hsi_process_header)(void *hdr_set, struct lsxpack_header *hdr);
    void                (*hsi_discard_header_set)(void *hdr_set);
    enum lsquic_hsi_flag hsi_flags;
};
struct lsquic_engine_api
{
    const struct lsquic_engine_settings *ea_settings;   
    const struct lsquic_stream_if       *ea_stream_if;
    void                                *ea_stream_if_ctx;
    lsquic_packets_out_f                 ea_packets_out;
    void                                *ea_packets_out_ctx;
    lsquic_lookup_cert_f                 ea_lookup_cert;
    void                                *ea_cert_lu_ctx;
    struct ssl_ctx_st *                (*ea_get_ssl_ctx)(void *peer_ctx,
                                                const struct sockaddr *local);
    const struct lsquic_shared_hash_if  *ea_shi;
    void                                *ea_shi_ctx;
    const struct lsquic_packout_mem_if  *ea_pmi;
    void                                *ea_pmi_ctx;
    lsquic_cids_update_f                 ea_new_scids;
    lsquic_cids_update_f                 ea_live_scids;
    lsquic_cids_update_f                 ea_old_scids;
    void                                *ea_cids_update_ctx;
    int                                (*ea_verify_cert)(void *verify_ctx,
                                                struct stack_st_X509 *chain);
    void                                *ea_verify_ctx;
    const struct lsquic_hset_if         *ea_hsi_if;
    void                                *ea_hsi_ctx;
    void              *ea_stats_fh;
    const char                          *ea_alpn;
    void                               (*ea_generate_scid)(void *ctx,
                                lsquic_conn_t *, lsquic_cid_t *, unsigned);
    void                                *ea_gen_scid_ctx;
};
lsquic_engine_t *
lsquic_engine_new (unsigned lsquic_engine_flags,
                   const struct lsquic_engine_api *api);
lsquic_conn_t *
lsquic_engine_connect (lsquic_engine_t *, enum lsquic_version,
                       const struct sockaddr *local_sa,
                       const struct sockaddr *peer_sa,
                       void *peer_ctx, lsquic_conn_ctx_t *conn_ctx,
                       const char *hostname, unsigned short base_plpmtu,
                       const unsigned char *sess_resume, size_t sess_resume_len,
                       const unsigned char *token, size_t token_sz);
int
lsquic_engine_packet_in (lsquic_engine_t *,
        const unsigned char *packet_in_data, size_t packet_in_size,
        const struct sockaddr *sa_local, const struct sockaddr *sa_peer,
        void *peer_ctx, int ecn);
void
lsquic_engine_process_conns (lsquic_engine_t *engine);
int
lsquic_engine_has_unsent_packets (lsquic_engine_t *engine);
void
lsquic_engine_send_unsent_packets (lsquic_engine_t *engine);
void
lsquic_engine_destroy (lsquic_engine_t *);
void
lsquic_conn_make_stream (lsquic_conn_t *);
void
lsquic_conn_close (lsquic_conn_t *);
int
lsquic_stream_wantread (lsquic_stream_t *s, int is_want);
ssize_t
lsquic_stream_read (lsquic_stream_t *s, void *buf, size_t len);
int
lsquic_stream_wantwrite (lsquic_stream_t *s, int is_want);
ssize_t
lsquic_stream_write (lsquic_stream_t *s, const void *buf, size_t len);
int
lsquic_stream_flush (lsquic_stream_t *s);
struct lsquic_http_headers
{
    int                     count;
    struct lsxpack_header  *headers;
};
int
lsquic_stream_send_headers (lsquic_stream_t *s,
                               const lsquic_http_headers_t *headers, int eos);
int
lsquic_conn_push_stream (lsquic_conn_t *c, void *hdr_set, lsquic_stream_t *s,
    const lsquic_http_headers_t *headers);
int lsquic_stream_shutdown(lsquic_stream_t *s, int how);
int lsquic_stream_close(lsquic_stream_t *s);
int
lsquic_stream_is_pushed (const lsquic_stream_t *s);
lsquic_conn_t * lsquic_stream_conn(const lsquic_stream_t *s);
int
lsquic_set_log_level (const char *log_level);
int
lsquic_global_init (int flags);
void
lsquic_global_cleanup (void);
enum lsquic_version
lsquic_alpn2ver (const char *alpn, size_t len);
lsquic_conn_ctx_t *
lsquic_conn_get_ctx (const lsquic_conn_t *);
const char *
lsquic_conn_get_sni (lsquic_conn_t *);